<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_country_names">City and country</string>
    <string name="city_name">City</string>
    <string name="country_name">Country</string>
    <string name="temperature">temperature</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">Location settings</string>
    <string name="temperature_rus">Temp.:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="wind_to">Wind:</string>
    <string name="error_connection">Can not get connection</string>
    <string name="russia">Russia</string>
</resources>
